#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package TimeTool
#------------------------------------------------------------------------

Package author: Matthew J. Weaver

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-00-02
2014-05-06 Matthew J. Weaver
- added doc directory.

Tag: V00-00-01
2014-05-06 Matthew J. Weaver
- initial checkin.

