@@ -6,6 +6,9 @@ modules = TimeTool.Analyze TimeTool.Check
 get_key     = DetInfo(SxrBeamline.0:Opal1000.0)
 #  Results are written to <put_key>:AMPL, <put_key>:FLTPOS, ...
 put_key     = TTANA
+# default is to put 6 doubles in the Event. This can also be
+# six ndarray's of size 1 (ndarrays are converted for Python)
+put_ndarrays = false
 #  Indicate absence of beam for updating reference
 eventcode_bykik = 162
 #  Indicate events to skip (no laser, for example)
